# reMacro

./: CMakeLists.txt  LICENSE  README.md  res.aps  res.rc  stdafx.h
Server/: index.js  package-lock.json  package.json
Server/src/: app.js  index.js
Server/src/controllers/: auth.controller.js  user.controller.js
Server/src/docs/: swaggerDef.js
Server/src/middlewares/: auth.js  multer.js  rateLimiter.js
Server/src/models/: comment.model.js  downloads.model.js  index.js  macro.model.js  user.model.js
Server/src/routes/: auth.route.js  user.route.js
Server/src/services/: avatar.service.js  comment.service.js  email.service.js  index.js  macro.service.js  token.service.js
Server/src/validations/: user.validation.js
assets/: macromenuoptions.ui  mainwindow.ui
forms/: macromenuoptions.ui  mainwindow.ui  res.qrc
src/: HTTPclient.cpp  HTTPclient.h  macromenuoptions.cpp  macromenuoptions.h  main.cpp  mainwindow.cpp  mainwindow.h  protocol.h  qwinwidget.cpp  qwinwidget.h  resource.h  uiUtils.cpp  uiUtils.h  winnativewindow.cpp  winnativewindow.h
src/Filters/: MacroList.cpp  MacroList.h  OverlayWidget.cpp  OverlayWidget.h  keyboard_field.cpp  keyboard_field.h  passwordedit.cpp  passwordedit.h
src/Macro/: cmdtask.cpp  cmdtask.h  keyboardpress.cpp  keyboardpress.h  keyboardtype.cpp  keyboardtype.h  looptask.cpp  looptask.h  looptaskframe.cpp  looptaskframe.h  macro_frame.cpp  macro_frame.h  marketmacroframe.cpp  marketmacroframe.h  mouseclick.cpp  mouseclick.h  sequence.cpp  sequence.h  task.cpp  task.h  taskframe.cpp  taskframe.h
